# conn-sqla-file-extender

./: README.md  pyproject.toml
src/: detector.py  env.py  executor.py  logger.py  main.py  naming.py  runtime.py  settings.py  templates.py  types_source.py
src/execute/: apply_history.py  purge.py  rename.py
src/execute/apply/: file_name.py  mime.py  starlette.py  werkzeug.py
src/template/: string_field.py
src/template/file_name/: dynamic.py  static.py
src/template/mime/: dynamic.py  static.py
src/template/starlette/: getter.py  setter.py  starlette.py
src/template/werkzeug/: getter.py  setter.py  werkzeug.py
src/utils/: ast_tools.py  io.py
tests/create_tests/: test_no_history.py
tests/donor_files/: file_maker.py  no_file.py  one_file.py
tests/executor/add_key/: test_blank_file_add_key.py
tests/inputs/: missing_key_inputs.py  new_file_name_inputs.py  new_key_inputs.py  new_mime_inputs.py
tests/runtime/create_tests/: test_create.py
tests/runtime/missing_tests/: test_missing.py
tests/runtime/rename_tests/: test_rename.py
tests/template/file_name/: test_dynamic_file.py  test_static_file.py
tests/template/mime/: test_dynamic_mime.py  test_static_mime.py
tests/template/starlette/: test_starlett.py
tests/template/werkzeug/: test_werkzeug.py
